# cda-tries

./: .gitignore  Benchmark.cpp  CMakeLists.txt  LICENSE  README.md  TestArray.cpp  TestBc.cpp  TestDaTrieDic.cpp
lib/: Array.hpp  BC.cpp  Basic.hpp  Bc.cpp  Bc.hpp  BitArray.cpp  BitArray.hpp  Builder.cpp  Builder.hpp  CMakeLists.txt  CodeTable.cpp  CodeTable.hpp  DaTrie.cpp  DaTrieDic.cpp  DaTrieDic.hpp  DacBC.hpp  DacBc.cpp  DacBc.hpp  FastDacBC.hpp  FastDacBc.cpp  FastDacBc.hpp  FlatArray.cpp  FlatArray.hpp  PlainBC.cpp  PlainBc.cpp  PlainBc.hpp  SmallArray.cpp  SmallArray.hpp
previous/: BenchmarkPrev.cpp  TestPrevDaTrieDic.cpp
previous-tries/: BenchmarkPrev.cpp  CMakeLists.txt  README.md  TestPrevDaTrieDic.cpp
previous-tries/lib/: CdaTrieDic.cpp  CdaTrieDic.hpp  DalfTrieDic.cpp  DalfTrieDic.hpp  PrevDaTrieDic.cpp  PrevDaTrieDic.hpp
previous/lib/: CMakeLists.txt  CdaTrieDic.cpp  CdaTrieDic.hpp  DalfTrieDic.cpp  DalfTrieDic.hpp  PrevDaTrieDic.cpp  PrevDaTrieDic.hpp
src/: BC.hpp  Basic.hpp  BitArray.cpp  BitArray.hpp  Builder.cpp  Builder.hpp  CodeTable.cpp  DaTrie.hpp  DacBC.cpp  FastDacBC.cpp  PlainBC.hpp  main.cpp
